--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -8,6 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - id: release
+      env:
+        GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      run: ${{ secrets.RELEASE_SCRIPT }}
+    - run: echo "${{ steps.release.outputs.version}}"
+    - run: cat "release-notes.md"
     - id: cache-samples
       uses: actions/cache@v4
       with:
