--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        fetch-tags: true
     - id: release
       env:
         GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
