--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -21,8 +21,8 @@ jobs:
     - run: sudo apt-get update
     - run: sudo apt-get install flac lame sox imagemagick --yes
     - run: cargo install imdl
-    - run: cargo build
-    - run: cargo test --no-fail-fast
+    - run: cargo build --release
+    - run: cargo test --release --no-fail-fast
       env:
         API_KEY: ${{ secrets.API_KEY }}
         SOURCE: ${{ secrets.SOURCE }}
@@ -46,7 +46,7 @@ jobs:
         gh release create
         "v${{ steps.release.outputs.version }}"
         --title "v${{ steps.release.outputs.version }}"
-        --notes-file artifacts/RELEASE_NOTES.md
+        --notes-file release-notes.md
         --target ${{ github.ref_name }}
     - name: Create Pre-Release
       if: ${{ steps.release.outputs.version != '' && contains(steps.release.outputs.version, '-') }}
@@ -59,3 +59,15 @@ jobs:
         --notes-file release-notes.md
         --target ${{ github.ref_name }}
         --prerelease
+    - run: cargo install cargo-edit
+      if: ${{ steps.release.outputs.version != ''}}
+    - run: cargo set-version ${{ steps.release.outputs.version }}
+      if: ${{ steps.release.outputs.version != ''}}
+    - run: |
+        gh release upload
+        "v${{ steps.release.outputs.version }}"
+        "targets/release/caesura"
+        --clobber
+        --repo "${{ github.repository }}"
+      if: ${{ steps.release.outputs.version != ''}}
+
