--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -4,14 +4,41 @@ on:
 env:
   CARGO_TERM_COLOR: always
 jobs:
-  on-push:
+
+  release:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.release.outputs.version }}
     steps:
 
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
         fetch-tags: true
+
+    - id: release
+      env:
+        GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      run: ${{ secrets.RELEASE_SCRIPT }}
+
+    - run: echo "${{ needs.release.outputs.version}}"
+
+    - run: cat "release-notes.md"
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: notes
+        path: release-notes.md
+
+
+  cargo-build:
+    runs-on: ubuntu-latest
+    needs:
+    - release
+    steps:
+
+    - uses: actions/checkout@v4
 
     - id: cache-samples
       uses: actions/cache@v4
@@ -38,20 +65,11 @@ jobs:
 
     - run: sudo apt-get install flac lame sox imagemagick --yes
 
-    - id: release
-      env:
-        GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-      run: ${{ secrets.RELEASE_SCRIPT }}
-
-    - run: echo "${{ steps.release.outputs.version}}"
-
-    - run: cat "release-notes.md"
-
     - run: /home/linuxbrew/.linuxbrew/bin/brew install cargo-edit
-      if: ${{ steps.release.outputs.version != ''}}
+      if: ${{ needs.release.outputs.version != ''}}
 
-    - run: /home/linuxbrew/.linuxbrew/bin/cargo-set-version set-version ${{ steps.release.outputs.version }}
-      if: ${{ steps.release.outputs.version != ''}}
+    - run: /home/linuxbrew/.linuxbrew/bin/cargo-set-version set-version ${{ needs.release.outputs.version }}
+      if: ${{ needs.release.outputs.version != ''}}
 
     - run: cargo build --release
 
@@ -69,61 +87,109 @@ jobs:
     - run: cargo fmt --quiet --check
       continue-on-error: true
 
-    - name: gh release create
-      if: ${{ steps.release.outputs.version != '' && ! contains(steps.release.outputs.version, '-') }}
-      env:
-        GH_TOKEN: ${{ github.token }}
-      run: >
-        gh release create
-        "v${{ steps.release.outputs.version }}"
-        --title "v${{ steps.release.outputs.version }}"
-        --notes-file release-notes.md
-        --target ${{ github.ref_name }}
-
-    - name: gh release create --prerelease
-      if: ${{ steps.release.outputs.version != '' && contains(steps.release.outputs.version, '-') }}
-      env:
-        GH_TOKEN: ${{ github.token }}
-      run: >
-        gh release create
-        "v${{ steps.release.outputs.version }}"
-        --title "v${{ steps.release.outputs.version }}"
-        --notes-file release-notes.md
-        --target ${{ github.ref_name }}
-        --prerelease
-
-    - name: gh release upload
-      run: >
-        gh release upload
-        "v${{ steps.release.outputs.version }}"
-        "target/release/caesura"
-        --clobber
-        --repo "${{ github.repository }}"
-      env:
-        GH_TOKEN: ${{ github.token }}
-      if: ${{ steps.release.outputs.version != ''}}
+    - run: git --no-pager diff --exit-code
+      continue-on-error: true
 
     - run: cargo publish --allow-dirty
       env:
         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-      if: ${{ steps.release.outputs.version != ''}}
+      if: ${{ needs.release.outputs.version != ''}}
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: caesura
+        path: target/release/caesura
+
+
+  github-release:
+    runs-on: ubuntu-latest
+    if: ${{ needs.release.outputs.version != ''}}
+    needs:
+      - release
+      - cargo-build
+    steps:
+
+    - uses: actions/download-artifact@v4
+      with:
+        name: notes
+
+    - name: gh release create
+      if: ${{ ! contains(needs.release.outputs.version, '-') }}
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: >
+        gh release create
+        "v${{ needs.release.outputs.version }}"
+        --title "v${{ needs.release.outputs.version }}"
+        --notes-file release-notes.md
+        --target ${{ github.ref_name }}
+
+    - name: gh release create --prerelease
+      if: ${{ contains(needs.release.outputs.version, '-') }}
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: >
+        gh release create
+        "v${{ needs.release.outputs.version }}"
+        --title "v${{ needs.release.outputs.version }}"
+        --notes-file release-notes.md
+        --target ${{ github.ref_name }}
+        --prerelease
+
+    - uses: actions/download-artifact@v4
+      with:
+        name: caesura
+
+    - name: gh release upload
+      run: >
+        gh release upload
+        "v${{ needs.release.outputs.version }}"
+        caesura
+        --clobber
+        --repo "${{ github.repository }}"
+      env:
+        GH_TOKEN: ${{ github.token }}
+
+
+  docker-build:
+    runs-on: ubuntu-latest
+    if: ${{ needs.release.outputs.version != ''}}
+    needs:
+    - release
+    steps:
 
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: ${{ steps.release.outputs.version != ''}}
 
     - run: docker build -t caesura .
-      if: ${{ steps.release.outputs.version != ''}}
 
-    - run: docker tag caesura ghcr.io/rogueoneecho/caesura:${{ steps.release.outputs.version }}
-      if: ${{ steps.release.outputs.version != ''}}
+    - run: docker tag caesura ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
 
-    - run: docker push ghcr.io/rogueoneecho/caesura:${{ steps.release.outputs.version }}
-      if: ${{ steps.release.outputs.version != ''}}
+    - run: docker push ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
 
     - run: docker tag caesura ghcr.io/rogueoneecho/caesura:latest
-      if: ${{ steps.release.outputs.version != '' && ! contains(steps.release.outputs.version, '-') }}
+      if: ${{ ! contains(needs.release.outputs.version, '-') }}
 
     - run: docker push ghcr.io/rogueoneecho/caesura:latest
-      if: ${{ steps.release.outputs.version != '' && ! contains(steps.release.outputs.version, '-') }}
+      if: ${{ ! contains(needs.release.outputs.version, '-') }}
+
+
+  docker-release:
+    runs-on: ubuntu-latest
+    if: ${{ ! contains(needs.release.outputs.version, '-') }}
+    needs:
+    - release
+    - cargo-build
+    steps:
+
+    - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - run: docker pull ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
+
+    - run: docker tag ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }} ghcr.io/rogueoneecho/caesura:latest
+
+    - run: docker push ghcr.io/rogueoneecho/caesura:latest
