ci: docker-release needs docker-build

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -195,6 +195,7 @@ jobs:
     needs:
     - release
     - cargo-build
+    - docker-build
     steps:
 
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
