--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -98,15 +98,29 @@ jobs:
     - run: git --no-pager diff --exit-code
       continue-on-error: true
 
-    - run: cargo publish --allow-dirty
-      env:
-        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-      if: ${{ needs.release.outputs.version != ''}}
-
     - uses: actions/upload-artifact@v4
       with:
         name: caesura
         path: target/release/caesura
+
+
+  cargo-publish:
+    runs-on: ubuntu-latest
+    if: ${{ needs.release.outputs.version != ''}}
+    needs:
+    - release
+    - cargo-build
+    steps:
+
+    - uses: actions/checkout@v4
+
+    - uses: actions/download-artifact@v4
+      with:
+        name: Cargo.toml
+
+    - run: cargo publish --allow-dirty
+      env:
+        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
 
   github-release:
