--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -38,8 +38,10 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: Cargo.toml
-        path: Cargo.toml
+        name: cargo-version
+        path: |
+          Cargo.toml
+          Cargo.lock
 
 
   cargo-build:
@@ -52,7 +54,7 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        name: Cargo.toml
+        name: cargo-version
 
     - id: cache-samples
       uses: actions/cache@v4
@@ -116,7 +118,7 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        name: Cargo.toml
+        name: cargo-version
 
     - run: cargo publish --allow-dirty
       env:
@@ -184,7 +186,7 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        name: Cargo.toml
+        name: cargo-version
 
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       env:
