--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -33,8 +33,10 @@ jobs:
     - run: /home/linuxbrew/.linuxbrew/bin/brew install cargo-edit
       if: ${{ steps.release.outputs.version != ''}}
 
-    - run: /home/linuxbrew/.linuxbrew/bin/cargo-set-version set-version ${{ needs.release.outputs.version }}
+    - run: /home/linuxbrew/.linuxbrew/bin/cargo-set-version set-version ${{ steps.release.outputs.version }}
       if: ${{ steps.release.outputs.version != ''}}
+
+    - run: git --no-pager diff
 
     - uses: actions/upload-artifact@v4
       with:
@@ -53,6 +55,8 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: Cargo.toml
+
+    - run: git --no-pager diff
 
     - id: cache-samples
       uses: actions/cache@v4
@@ -117,6 +121,8 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: Cargo.toml
+
+    - run: git --no-pager diff
 
     - run: cargo publish --allow-dirty
       env:
@@ -185,6 +191,8 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: Cargo.toml
+
+    - run: git --no-pager diff
 
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       env:
