--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -36,7 +36,7 @@ jobs:
     - run: /home/linuxbrew/.linuxbrew/bin/cargo-set-version set-version ${{ steps.release.outputs.version }}
       if: ${{ steps.release.outputs.version != ''}}
 
-    - run: git --no-pager diff
+    - run: git --no-pager diff --color
 
     - uses: actions/upload-artifact@v4
       with:
@@ -56,7 +56,7 @@ jobs:
       with:
         name: Cargo.toml
 
-    - run: git --no-pager diff
+    - run: git --no-pager diff --color
 
     - id: cache-samples
       uses: actions/cache@v4
@@ -99,7 +99,7 @@ jobs:
     - run: cargo fmt --quiet --check
       continue-on-error: true
 
-    - run: git --no-pager diff --exit-code
+    - run: git --no-pager diff --color --exit-code
       continue-on-error: true
 
     - uses: actions/upload-artifact@v4
@@ -122,7 +122,7 @@ jobs:
       with:
         name: Cargo.toml
 
-    - run: git --no-pager diff
+    - run: git --no-pager diff --color
 
     - run: cargo publish --allow-dirty
       env:
@@ -192,7 +192,7 @@ jobs:
       with:
         name: Cargo.toml
 
-    - run: git --no-pager diff
+    - run: git --no-pager diff --color
 
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       env:
