--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -137,6 +137,8 @@ jobs:
       - cargo-build
     steps:
 
+    - uses: actions/checkout@v4
+
     - uses: actions/download-artifact@v4
       with:
         name: release-notes.md
