--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -21,11 +21,9 @@ jobs:
         GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       run: ${{ secrets.RELEASE_SCRIPT }}
 
-    - run: echo "::notice::${{ steps.release.outputs.version}}"
+    - run: echo "::notice title=Version::${{ steps.release.outputs.version}}"
 
-    - run: |
-        NOTES=$(cat "release-notes.md")
-        echo "::notice title=Release Notes::$NOTES"
+    - run: echo "::notice title=Release Notes::$(cat release-notes.md)"
 
     - uses: actions/upload-artifact@v4
       with:
