--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -23,7 +23,7 @@ jobs:
 
     - run: echo "::notice title=Version::${{ steps.release.outputs.version}}"
 
-    - run: echo "::notice title=Release Notes::$(paste -sd '%0A' release-notes.md)"
+    - run: echo "::notice title=Release Notes::$(paste -sd '%0A%0A' release-notes.md)"
 
     - uses: actions/upload-artifact@v4
       with:
