--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -239,19 +239,19 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - uses: actions/download-artifact@v4
-      with:
-        name: Cargo.toml
-
-    - run: git --no-pager diff --color
-
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - run: docker build -t caesura .
+    - run: docker buildx create --use
 
-    - run: docker tag caesura ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
+    - run: >
+        docker buildx build .
+        --build-arg VERSION=${{ needs.release.outputs.version }}
+        --tag ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
+        --cache-from=type=gha
+        --cache-to=type=gha,mode=max
+        --push
 
     - run: docker push ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
 
