--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -248,9 +248,12 @@ jobs:
     - run: >
         docker buildx build .
         --build-arg VERSION=${{ needs.release.outputs.version }}
-        --tag ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
+        --tag caesura
         --cache-from=type=gha
         --cache-to=type=gha,mode=max
+        --push
+
+    - run: docker tag caesura ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
 
     - run: docker push ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
 
