--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -239,6 +239,13 @@ jobs:
 
     - uses: actions/checkout@v4
 
+    - uses: actions/cache@v4
+      with:
+        path: /tmp/.buildx-cache
+        key: buildx-${{ github.sha }}
+        restore-keys: |
+          buildx-
+
     - run: echo $GH_TOKEN | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -249,9 +256,15 @@ jobs:
         docker buildx build .
         --build-arg VERSION=${{ needs.release.outputs.version }}
         --tag ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
-        --cache-from=type=gha
-        --cache-to=type=gha,mode=max
+        --cache-from=type=local,src=/tmp/.buildx-cache
+        --cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max
         --push
+
+    # Temp fix
+    # https://github.com/docker/build-push-action/issues/252
+    # https://github.com/moby/buildkit/issues/1896
+    - run: rm -rf /tmp/.buildx-cache
+    - run: mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   docker-release:
     runs-on: ubuntu-latest
