--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -259,6 +259,7 @@ jobs:
 
     - run: >
         docker buildx build .
+        --platform linux/amd64,linux/arm64
         --build-arg VERSION=${{ needs.release.outputs.version }}
         --tag ghcr.io/rogueoneecho/caesura:${{ needs.release.outputs.version }}
         --cache-from=type=local,src=/tmp/.buildx-cache
