--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ mod_module_files = "allow"
 module_inception = "allow"
 module_name_repetitions = "allow"
 needless_pass_by_value = "allow"
+neg_multiply = "allow"
 new_without_default = "allow"
 non_ascii_literal = "allow"
 panic = "warn"
