feat: reduce rate limit to 5 requests per 10 seconds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ claxon = "0.4.3"
 colored = "3.0.0"
 flat_db = "0.2.0"
 futures = "0.3.31"
-gazelle_api = "0.6.0-alpha.4"
+gazelle_api = "0.7.0"
 html-escape = "0.2.13"
 humantime = "2.1.0"
 indicatif = "0.17.9"
