--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ claxon = "0.4.3"
 colored = "3.0.0"
 flat_db = "0.2.0"
 futures = "0.3.31"
-gazelle_api = "0.8.0"
+gazelle_api = "0.9.0"
 html-escape = "0.2.13"
 humantime = "2.1.0"
 indicatif = "0.17.9"
@@ -44,7 +44,7 @@ serde_yaml = "0.9.34"
 tokio = { version = "1.43.0", features = ["full"] }
 
 [build-dependencies]
-built = "^0.7"
+built = "0.7.5"
 
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
