--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -60,6 +60,11 @@ jobs:
           test: true
         - os: ubuntu-24.04
           target: x86_64-unknown-linux-musl
+        - os: macos-13
+          target: x86_64-apple-darwin
+        - os: macos-14
+          target: aarch64-apple-darwin
+          test: true
 
     steps:
 
@@ -69,10 +74,10 @@ jobs:
       id: cache-cargo
       uses: actions/cache/restore@v4
       with:
-        key: cargo-${{ runner.os }}-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
-          cargo-${{ runner.os }}-${{ matrix.target }}-
-          cargo-${{ runner.os }}-
+          ${{ runner.os }}-cargo-${{ matrix.target }}-
+          ${{ runner.os }}-cargo-
         path: |
           ~/.cargo/bin/
           ~/.cargo/registry/index/
@@ -150,6 +155,9 @@ jobs:
 
     - if: matrix.test && contains(matrix.os, 'ubuntu')
       run: sudo apt-get install flac lame sox imagemagick --yes
+
+    - if: matrix.test && contains(matrix.os, 'macos')
+      run: brew install flac lame sox imagemagick eye-d3
 
     - if: matrix.test
       run: |
