--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -95,6 +95,9 @@ jobs:
     - if: contains(matrix.os, 'ubuntu')
       run: sudo apt-get update
 
+    - if: ${{ matrix.target == 'x86_64-unknown-linux-musl' }}
+      run: sudo apt-get install musl-tools --yes
+
     - if: matrix.target == 'aarch64-unknown-linux-gnu'
       run: sudo apt-get install gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross --yes
 
