deps: update dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,28 +20,28 @@ version = "0.0.0"
 publish = true
 
 [dependencies]
-bytes = "1.10.1"
-chrono = "0.4.42"
-clap = { version = "4.5.50", features = ["derive"] }
+bytes = "1.11.0"
+chrono = "0.4.43"
+clap = { version = "4.5.54", features = ["derive"] }
 claxon = "0.4.3"
-colored = "3.0.0"
+colored = "3.1.1"
 flat_db = "0.3.0"
 futures = "0.3.31"
-gazelle_api = "0.9.0"
+gazelle_api = "0.9.1"
 html-escape = "0.2.13"
 humantime = "2.3.0"
-indicatif = "0.18.1"
+indicatif = "0.18.3"
 lofty = "0.22.4"
-log = { version = "0.4.28", features = ["std"] }
+log = { version = "0.4.29", features = ["std"] }
 more-di = { version = "3.1.0", features = ["async", "builder"] }
 num_cpus = "1.17.0"
 regex = "1.12.2"
-reqwest = { version = "0.12.24", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
+reqwest = { version = "0.13.1", features = ["rustls", "json", "multipart", "stream"], default-features = false }
 rogue_logging = "0.3.0"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.149"
 serde_yaml = "0.9.34"
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { version = "1.49.0", features = ["full"] }
 
 [build-dependencies]
 built = "0.8.0"
