--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ claxon = "0.4.3"
 colored = "3.1.1"
 flat_db = "0.3.0"
 futures = "0.3.31"
-gazelle_api = "0.10.0"
+gazelle_api = "0.11.0"
 html-escape = "0.2.13"
 humantime = "2.3.0"
 indicatif = "0.18.3"
@@ -42,6 +42,12 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_yaml = "0.9.34"
 tokio = { version = "1.49.0", features = ["full"] }
+
+[dev-dependencies]
+gazelle_api = { version = "0.11.0", features = ["mock"] }
+image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
+insta = { version = "1.42", features = ["yaml"] }
+sha2 = "0.10"
 
 [build-dependencies]
 built = "0.8.0"
