feat: add `--rename-tracks` option for standardized output filenames
Adds a new CLI option that renames transcoded files from source filenames
to a standardized format: `{track:0>N} {title}.{ext}`. Multi-disc releases
are organized into `CD1/`, `CD2/` subfolders.

Key changes:
- Add `--rename-tracks` flag to `FileOptions` with YAML config support
- Add `DiscContext` struct to compute track padding and detect multi-disc
- Add `Collector::get_flacs_with_context()` for callers needing disc info
- Cache ID3 tags on `FlacFile` via thread-safe `OnceCell`
- Update verify command to check for missing disc_number on multi-disc
- Add snapshot tests for single-disc, multi-disc, double-digit, and vinyl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ humantime = "2.3.0"
 indicatif = "0.18.3"
 lofty = "0.22.4"
 log = { version = "0.4.29", features = ["std"] }
+once_cell = "1.21"
 more-di = { version = "3.1.0", features = ["async", "builder"] }
 num_cpus = "1.17.0"
 regex = "1.12.2"
@@ -96,6 +97,7 @@ single_call_fn = "allow"
 std_instead_of_alloc = "allow"
 std_instead_of_core = "allow"
 str_to_string = "warn"
+struct_field_names = "allow"
 string_add = "allow"
 tests_outside_test_module = "allow"
 unneeded_wildcard_pattern = "warn"
