--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -102,7 +102,7 @@ jobs:
 
     - run: rustup target add ${{ matrix.target }}
 
-    - run: cargo build --release --target ${{ matrix.target }}
+    - run: cargo build --release --target ${{ matrix.target }} ${{ matrix.test && '--tests' || '' }}
 
     - name: Save cargo cache
       id: cargo-cache-save
