chore: use cargo-chef in `Dockerfile`, fix CI build, remove `markdown_help` crate
- Refactor `Dockerfile` to use cargo-chef for better dependency caching
- Add `--bins` flag to CI cargo build command
- Delete unused `crates/markdown_help` workspace member

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -105,7 +105,7 @@ jobs:
 
     - run: rustup target add ${{ matrix.target }}
 
-    - run: cargo build --release --target ${{ matrix.target }} ${{ matrix.test && '--tests' || '' }}
+    - run: cargo build --release --target ${{ matrix.target }} --bins ${{ matrix.test && '--tests' || '' }}
 
     - name: Save cargo cache
       id: cargo-cache-save
